k8/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama-granite-demo
spec:
  finalizers:
  - kubernetes
