k8/base/service-ollama.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ollama
    app.kubernetes.io/component: ollama
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
    app.kubernetes.io/part-of: ai-demo
    app.openshift.io/runtime-version: latest
  name: ollama
  namespace: ollama-granite-demo
spec:
  ports:
  - name: 11434-tcp
    port: 11434
  selector:
    app: ollama
    deployment: ollama
