k8/base/route-open-webui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: open-webui
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: open-webui
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/part-of: ai-demo
    app.openshift.io/runtime-version: main
  name: open-webui
  namespace: ollama-granite-demo
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: open-webui
    weight: 100
  wildcardPolicy: None
